--- a/src/pages/FeedPage/FeedPage.style.scss
+++ b/src/pages/FeedPage/FeedPage.style.scss
@@ -2,6 +2,7 @@
 
 .feed-page {
   display: flex;
+  border: 1px solid red;
   flex-direction: column;
   gap: 1.6rem;
   align-items: center;
